--- a/src/main/resources/templates/books/edit.html
+++ b/src/main/resources/templates/books/edit.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
-    <link rel="stylesheet" type="text/css" href="../../static/css/style.css" th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" type="text/css"
+    th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
     <meta charset="UTF-8" />
     <title>書籍編集画面</title>
   </head>
