--- a/src/main/resources/templates/books/list.html
+++ b/src/main/resources/templates/books/list.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
   <head>
-    <link rel="stylesheet" type="text/css"
-    th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
+    <link rel="stylesheet" type="text/css" href="../../static/css/style.css" th:href="@{/css/style.css}"/>
     <meta charset="UTF-8" />
     <title>書籍登録一覧画面</title>
   </head>
   <body>
+    <p>
+      <span sec:authentication="principal.user.username">duke</span>さんログイン中。
+  </p>
+  <form th:action="@{/logout}" method="post"><input type="submit" class="btn btn-default btn-xs" value="ログアウト" /></form>
     <form th:action="@{/books/create}" th:object="${bookForm}" method="post">
       <table>
         <tr><td>タイトル:</td><td>
