--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -20,6 +20,10 @@ th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
          <input type="password" class="form-control" name="password" placeholder="Password" required="required" />
          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         </form>
+        <br />
+        <div class="text-center">
+            <a class="btn btn-lg btn-success" th:href="@{/users}">新規ユーザー登録</a>
+        </div>
     </div>
 </body>
 </html>
