--- a/src/main/resources/templates/users/add.html
+++ b/src/main/resources/templates/users/add.html
@@ -19,5 +19,9 @@
       </table>
       <input type="submit" value="作成" />
     </form>
+    <br />
+    <div class="text-center">
+        <a class="btn btn-secondary" th:href="@{/loginForm}">戻る</a>
+    </div>
   </body>
 </html>
